--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Epunda+Slab:ital,wght@0,300..900;1,300..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <title>Muhammad Faisal</title>
+    <title>Portfolio | Muhammad Faisal</title>
   </head>
   <body class="bg-zinc-900 text-white" id="beranda">
     <div id="root"></div>
